Migrate Glue to AWS SDK v2